# libconbtui

./: Makefile.am  autogen.sh  conbtdialogs.pc.in  configure.ac
debian/: changelog  conbtdialogs-dev.install  control  copyright  rules
sample/: conbtdialogs_send_file.c
src/: Makefile.am  conbtdialogs-dbus.h
